@@ -77,6 +77,8 @@ public class HyphenationCompoundWordTokenFilterFactory extends TokenFilterFactor
   private final int minSubwordSize;
   private final int maxSubwordSize;
   private final boolean onlyLongestMatch;
+  private final boolean noSubMatches;
+  private final boolean noOverlappingMatches;
 
   /** Creates a new HyphenationCompoundWordTokenFilterFactory */
   public HyphenationCompoundWordTokenFilterFactory(Map<String, String> args) {
@@ -90,6 +92,8 @@ public class HyphenationCompoundWordTokenFilterFactory extends TokenFilterFactor
     maxSubwordSize =
         getInt(args, "maxSubwordSize", CompoundWordTokenFilterBase.DEFAULT_MAX_SUBWORD_SIZE);
     onlyLongestMatch = getBoolean(args, "onlyLongestMatch", false);
+    noSubMatches = getBoolean(args, "noSubMatches", false);
+    noOverlappingMatches = getBoolean(args, "noOverlappingMatches", false);
     if (!args.isEmpty()) {
       throw new IllegalArgumentException("Unknown parameters: " + args);
     }
@@ -127,6 +131,8 @@ public class HyphenationCompoundWordTokenFilterFactory extends TokenFilterFactor
         minWordSize,
         minSubwordSize,
         maxSubwordSize,
-        onlyLongestMatch);
+        onlyLongestMatch,
+        noSubMatches,
+        noOverlappingMatches);
   }
 }
